--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,17 @@ h6{
 	margin-left: 2%;
 }
 @media screen and (max-width: 980px) {
-    
+       header {
+    background: no-repeat url('img/1.jpg') center top / cover;
+    height: 100vh;
+    width: 100%;
+    overflow: auto;
+    background-attachment: fixed;
+    background-position: center/relative;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
     h2{
       margin-top: 5%;
       font-size: 16px;
