--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 header {
-    background: url('../img/1.jpg');
+    background: url(../img/1.jpg);
     height: 100vh;
     width: 100%;
     overflow: auto;
