--- a/css/main.css
+++ b/css/main.css
@@ -144,6 +144,7 @@ h6{
 .people{
 	margin-top: 8%;
 	margin-left: 2%;
+	position: absolute;
 }
 @media screen and (max-width: 980px) {
        header {
