--- a/css/index.css
+++ b/css/index.css
@@ -84,6 +84,9 @@ h6{
     .col{
         font-size:16px;
     }
+    .people{
+        margin-top: 
+    }
     .footer{
         height: 100px;
     }
