--- a/css/transport.css
+++ b/css/transport.css
@@ -32,6 +32,7 @@ h3{
     padding: 10px;
     color: aliceblue;
     text-shadow: 1px 1px 2px black, 0 0 1em black;
+	text-align: center;
     
 }
 .btn{
