--- a/css/index.css
+++ b/css/index.css
@@ -85,7 +85,7 @@ h6{
         font-size:16px;
     }
     .people{
-        margin-top: 
+        margin-top: -30%;
     }
     .footer{
         height: 100px;
