--- a/css/sbornik.css
+++ b/css/sbornik.css
@@ -15,6 +15,9 @@ header {
     opacity: 0.9;
     width: 100%;
 }
+.answ51{
+    height: 350px;
+}
 h2{
     text-align: center;
     padding: 16px;
